// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MergeRequestsGrid component when drawer enabled is false when initialized matches the snapshot 1`] = `
<div>
  <div
    class="dashboard-grid gl-display-grid gl-grid-tpl-rows-auto"
  >
    <grid-column-heading-stub
      heading="Merge Request"
    />
     
    <grid-column-heading-stub
      class="gl-text-center"
      heading="Approval Status"
    />
     
    <grid-column-heading-stub
      class="gl-text-center"
      heading="Pipeline"
    />
     
    <grid-column-heading-stub
      class="gl-text-right"
      heading="Updates"
    />
     
    <div
      data-testid="merge-request"
    >
      <a
        data-testid="merge-request-link"
        href=""
      >
        Merge request 0
      </a>
    </div>
     
    <status-stub
      status="[object Object]"
    />
     
    <status-stub
      status="[object Object]"
    />
     
    <div
      class="gl-text-right gl-border-b-solid gl-border-b-1 gl-border-b-gray-100 gl-p-5 gl-relative"
    >
      <approvers-stub
        approvers=""
      />
       
      <!---->
       
      <time-ago-tooltip-stub
        class="gl-text-gray-500"
        cssclass=""
        time="2020-01-01T00:00:00.000Z"
        tooltipplacement="bottom"
      />
    </div>
    <div
      data-testid="merge-request"
    >
      <a
        data-testid="merge-request-link"
        href=""
      >
        Merge request 1
      </a>
    </div>
     
    <status-stub
      status="[object Object]"
    />
     
    <status-stub
      status="[object Object]"
    />
     
    <div
      class="gl-text-right gl-border-b-solid gl-border-b-1 gl-border-b-gray-100 gl-p-5 gl-relative"
    >
      <approvers-stub
        approvers=""
      />
       
      <!---->
       
      <time-ago-tooltip-stub
        class="gl-text-gray-500"
        cssclass=""
        time="2020-01-01T00:00:00.000Z"
        tooltipplacement="bottom"
      />
    </div>
  </div>
   
  <pagination-stub
    class="gl-mt-5"
  />
</div>
`;

exports[`MergeRequestsGrid component when drawer enabled is true when initialized matches the snapshot 1`] = `
<div>
  <div
    class="dashboard-grid gl-display-grid gl-grid-tpl-rows-auto"
  >
    <grid-column-heading-stub
      heading="Merge Request"
    />
     
    <grid-column-heading-stub
      class="gl-text-center"
      heading="Approval Status"
    />
     
    <grid-column-heading-stub
      class="gl-text-center"
      heading="Pipeline"
    />
     
    <grid-column-heading-stub
      class="gl-text-right"
      heading="Updates"
    />
     
    <div
      class="dashboard-merge-request dashboard-grid gl-display-grid gl-grid-tpl-rows-auto gl-hover-bg-blue-50 gl-hover-text-decoration-none gl-hover-cursor-pointer"
      data-testid="merge-request-drawer-toggle"
      tabindex="0"
    >
      <div
        data-testid="merge-request"
      >
        <a
          data-testid="merge-request-link"
          href=""
        >
          Merge request 0
        </a>
      </div>
       
      <status-stub
        status="[object Object]"
      />
       
      <status-stub
        status="[object Object]"
      />
       
      <div
        class="gl-text-right gl-border-b-solid gl-border-b-1 gl-border-b-gray-100 gl-p-5 gl-relative"
      >
        <approvers-stub
          approvers=""
        />
         
        <!---->
         
        <time-ago-tooltip-stub
          class="gl-text-gray-500"
          cssclass=""
          time="2020-01-01T00:00:00.000Z"
          tooltipplacement="bottom"
        />
      </div>
    </div>
    <div
      class="dashboard-merge-request dashboard-grid gl-display-grid gl-grid-tpl-rows-auto gl-hover-bg-blue-50 gl-hover-text-decoration-none gl-hover-cursor-pointer"
      data-testid="merge-request-drawer-toggle"
      tabindex="0"
    >
      <div
        data-testid="merge-request"
      >
        <a
          data-testid="merge-request-link"
          href=""
        >
          Merge request 1
        </a>
      </div>
       
      <status-stub
        status="[object Object]"
      />
       
      <status-stub
        status="[object Object]"
      />
       
      <div
        class="gl-text-right gl-border-b-solid gl-border-b-1 gl-border-b-gray-100 gl-p-5 gl-relative"
      >
        <approvers-stub
          approvers=""
        />
         
        <!---->
         
        <time-ago-tooltip-stub
          class="gl-text-gray-500"
          cssclass=""
          time="2020-01-01T00:00:00.000Z"
          tooltipplacement="bottom"
        />
      </div>
    </div>
  </div>
   
  <pagination-stub
    class="gl-mt-5"
  />
</div>
`;
